# idascript

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
bins/: idascripter  idascripter.py
idascript/: __init__.py  ida.py  utils.py
src/idascript/: __init__.py  __main__.py  ida.py  nop_script.py  utils.py
